--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             $.ajax({
                 type: "GET",
                 //YOUR TURN: Replace with csv export link
-                url: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSEsgqCENxzxY1oVLu_BQPX_wuVqsJaK_0hmzEfAx5qfZuqrOiLhM_ev9rPtNTndfCrHhbfK5_aePCv/pub?gid=0&single=true&output=csv', // replace the text in single quotes with the link to your CSV file
+                url: 'https://docs.google.com/spreadsheets/d/e/2PACX-1vSEsgqCENxzxY1oVLu_BQPX_wuVqsJaK_0hmzEfAx5qfZuqrOiLhM_ev9rPtNTndfCrHhbfK5_aePCv/pub?output=csv', // replace the text in single quotes with the link to your CSV file
                 dataType: "text",
                 success: function (csvData) { makeGeoJSON(csvData); }
             });
@@ -49,19 +49,26 @@
                             source: { type: 'geojson', data: geojson },
                             paint: {
                                 'circle-radius': 6,
-                                'circle-color': 'purple'
+                                'circle-color': 'green'
                             }
                         });
                         // When a point is clicked, show a popup
                         map.on('click', 'points', function (e) {
                             var props = e.features[0].properties;
-                            // Create popup HTML: location as heading, description as text
-                            var html = `<h3>${props.location}</h3><p>${props.description}</p>`; // replace 'location' and 'description' with the actual column names from your CSV
+
+                            var html = `
+                                <h3>${props.location}</h3>
+                                <p><strong>Common Name:</strong> ${props.common_name}</p>
+                                <p>${props.description}</p>
+                                <p><strong>Observed Date:</strong> ${props.observed_date}</p>
+                            `;
+
                             new maplibregl.Popup()
                                 .setLngLat(e.lngLat)
                                 .setHTML(html)
                                 .addTo(map);
                         });
+
 
                         // Change cursor to pointer when hovering over points
                         map.on('mouseenter', 'points', function () {
